# LLECP

./: .gitignore  README.md
LLECP/: CMakeLists.txt  main.cpp
LLECP/EtherCATMaster/: CMakeLists.txt  EtherCATDef.h  EtherCATMaster.cpp  EtherCATMaster.h  sdo_operation.cpp
LLECP/EtherCATMaster/SOEM/: CMakeLists.txt
LLECP/EtherCATMaster/SOEM/cmake/: AddENI.cmake  Linux.cmake  Windows.cmake  rt-kernel.cmake
LLECP/EtherCATMaster/SOEM/cmake/tools/: FindSphinx.cmake
LLECP/EtherCATMaster/SOEM/osal/: osal.h
LLECP/EtherCATMaster/SOEM/osal/linux/: osal.c  osal_defs.h
LLECP/EtherCATMaster/SOEM/osal/rtk/: osal.c  osal_defs.h
LLECP/EtherCATMaster/SOEM/osal/win32/: osal.c  osal_defs.h
LLECP/EtherCATMaster/SOEM/oshw/linux/: nicdrv.c  nicdrv.h  oshw.c  oshw.h
LLECP/EtherCATMaster/SOEM/oshw/rtk/: nicdrv.c  nicdrv.h  oshw.c  oshw.h
LLECP/EtherCATMaster/SOEM/oshw/win32/: nicdrv.c  nicdrv.h  oshw.c  oshw.h
LLECP/EtherCATMaster/SOEM/samples/ec_sample/: CMakeLists.txt  ec_sample.c
LLECP/EtherCATMaster/SOEM/samples/eepromtool/: CMakeLists.txt  eepromtool.c
LLECP/EtherCATMaster/SOEM/samples/eni_test/: CMakeLists.txt  eni_test.c  sample-eni.xml
LLECP/EtherCATMaster/SOEM/samples/eoe_test/: CMakeLists.txt  eoe_test.c
LLECP/EtherCATMaster/SOEM/samples/firm_update/: CMakeLists.txt  firm_update.c
LLECP/EtherCATMaster/SOEM/samples/simple_ng/: CMakeLists.txt  simple_ng.c
LLECP/EtherCATMaster/SOEM/samples/slaveinfo/: CMakeLists.txt  slaveinfo.c
LLECP/EtherCATMaster/SOEM/soem/: ec_base.c  ec_base.h  ec_coe.c  ec_coe.h  ec_config.c  ec_config.h  ec_dc.c  ec_dc.h  ec_eoe.c  ec_eoe.h  ec_foe.c  ec_foe.h  ec_main.c  ec_main.h  ec_options.h  ec_print.c  ec_print.h  ec_soe.c  ec_soe.h  ec_type.h  soem.h
LLECP/EtherCATMaster/slave/: EL1088.cpp  EL1088.h  EL2088.cpp  EL2088.h  NETX_50_RE_ECS.cpp  NETX_50_RE_ECS.h  SlaveBase.cpp  SlaveBase.h  SlaveDef.h
LLECP/LLSMC/: CMakeLists.txt
LLECP/LLSMC/CIA402Axis/: AxisErrorCode.h  CIA402Axis.cpp  CIA402Axis.h  CIA402AxisConfig.cpp  CIA402AxisDef.h  CIA402AxisGeneral.cpp  CIA402AxisPDO.cpp  CMakeLists.txt
LLECP/LLSMC/SMbasic/: CMakeLists.txt  SMbasic.cpp  SMbasic.h  SMbasicDef.h  SMbasic_stdafx.h
LLECP/LLSMC/SMbasic/AxisConfig/: MC_SetGearingRatio.cpp  MC_SetGearingRatio.h  MC_SetPosition.cpp  MC_SetPosition.h
LLECP/LLSMC/SMbasic/AxisControl/: MC_PowerOn.cpp  MC_PowerOn.h  MC_Reset.cpp
LLECP/LLSMC/SMbasic/AxisMovement/: MC_FollowPosition.cpp  MC_FollowVelocity.cpp  MC_MoveAbsolute.cpp  MC_MoveRelative.cpp  MC_MoveVelocity.cpp  MC_Stop.cpp
LLECP/LLSMC/SMbasic/AxisRead/: MC_ReadActualPosition.cpp  MC_ReadActualPosition.h
LLECP/LLSMC/SoftMotion/: SMbasicErrorCode.h  SoftMotion.h  SoftMotionPlanner.cpp
LLECP/LLSMC/SoftMotion/motion_algorithm/: CMakeLists.txt
LLECP/LLSMC/SoftMotion/motion_algorithm/motion_planning/: MotionDefine.h  motion_planning.cpp  motion_planning.h
LLECP/RT_Script/: CMakeLists.txt  RT_Script.cpp  RT_Script.h  RT_ScriptActuator.cpp  RT_ScriptActuatorUint.cpp  RT_ScriptCalculator.cpp  RT_ScriptInterpreter.cpp  ScriptDefine.h  ScriptVariable.cpp  ScriptVariable.h  sCmdNameDefine.h
LLECP/RT_Script/FuncUint/: FuncBase.cpp  FuncBase.h
LLECP/RT_Script/ScriptUint/: Definition.h  ScriptUint_Buffer.cpp  ScriptUint_Buffer.h  ScriptUint_Cmd.cpp  ScriptUint_Cmd.h  ScriptUint_Line.cpp  ScriptUint_Line.h  ScriptUint_Token.cpp  ScriptUint_Token.h
LLECP/STExecEngine/: CMakeLists.txt  STExecEngine.cpp  STExecEngine.h
LLECP/STExecEngine/CodeComponent/: BaseToken.cpp  BaseToken.h  BufferUint.cpp  BufferUint.h  CmdUint.cpp  CmdUint.h  LineUint.cpp  LineUint.h  UintDef.h
LLECP/STExecEngine/CompilerCore/: Actuator.cpp  Actuator.h  Actuatot_LogicalStatement.cpp  Calculator.cpp  Calculator.h  EvalVisitor.cpp  EvalVisitor.h  FunctionManager.cpp  FunctionManager.h  Parser.cpp  Parser.h  ParserManager.cpp  ParserManager.h  ParserStringDef.h  ProgramManager.cpp  ProgramManager.h  Value.h  VariableManager.cpp  VariableManager.h
LLECP/STExecEngine/CompilerCore/ANTLR/: STGrammar.g4  STGrammarBaseListener.cpp  STGrammarBaseListener.h  STGrammarBaseVisitor.cpp  STGrammarBaseVisitor.h  STGrammarLexer.cpp  STGrammarLexer.h  STGrammarLexer.interp  STGrammarLexer.tokens  STGrammarListener.cpp  STGrammarListener.h  STGrammarParser.cpp  STGrammarParser.h  STGrammarVisitor.cpp  STGrammarVisitor.h
LLECP/STExecEngine/CompilerCore/ANTLR/install/lib/pkgconfig/: gmock.pc  gmock_main.pc
LLECP/STExecEngine/CompilerCore/ANTLR/lib/pkgconfig/: gtest.pc  gtest_main.pc
LLECP/STExecEngine/Function/: FunctionInclude.h  FunctionInfo.cpp  FunctionInfo.h
LLECP/STExecEngine/Function/FunctionUint/: Function_AXIS_ENABLE.cpp  Function_AXIS_ENABLE.h  Function_HRPC.cpp  Function_HRPC.h
LLECP/STExecEngine/FunctionUint/: FunctionInclude.h  FunctionInfo.cpp  FunctionInfo.h  Function_HRPC.cpp  Function_HRPC.h
LLECP/STExecEngine/VariableUint/: StructInfo.cpp  StructInfo.h  StructManager.cpp  StructManager.h  VariableUint.cpp  VariableUint.h
LLECP/TestExamples/: CMakeLists.txt  EtherCATMasterExamples.cpp  MotionPlanningExamples.cpp  RT_ScriptExamples.cpp  STExecEngineExamples.cpp
